--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-popup-menu": "^0.15.12",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
